// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jumbo-cell should render correctly with all props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginLeft": 16,
          "marginTop": 59,
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Image
          source={1}
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Rubik-Bold",
          "fontSize": 30,
          "lineHeight": 38,
          "marginLeft": 12,
          "marginRight": 12,
          "textAlign": "left",
        }
      }
    >
      foo
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Rubik-Light",
          "fontSize": 15,
          "marginBottom": 25,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 10,
          "opacity": 0.7,
        }
      }
    >
      bar
    </Text>
    <View
      style={
        Object {
          "borderTopColor": "#444444",
          "borderTopWidth": 0.5,
          "bottom": 0,
          "left": 12,
          "opacity": 0.8,
          "position": "absolute",
          "right": 12,
        }
      }
    />
  </View>
</View>
`;

exports[`jumbo-cell should render correctly without props 1`] = `
<View
  accessibilityComponentType={undefined}
  accessibilityLabel={undefined}
  accessibilityTraits={undefined}
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeID={undefined}
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
      },
      undefined,
    ]
  }
  testID={undefined}
  tvParallaxProperties={undefined}
>
  <View
    style={
      Object {
        "marginBottom": 16,
        "marginLeft": 16,
        "marginRight": 16,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 15,
          "marginLeft": 16,
          "marginTop": 59,
        }
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <Image
          source={1}
        />
      </View>
    </View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={2}
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Rubik-Bold",
          "fontSize": 30,
          "lineHeight": 38,
          "marginLeft": 12,
          "marginRight": 12,
          "textAlign": "left",
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      numberOfLines={1}
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Rubik-Light",
          "fontSize": 15,
          "marginBottom": 25,
          "marginLeft": 12,
          "marginRight": 12,
          "marginTop": 10,
          "opacity": 0.7,
        }
      }
    />
    <View
      style={
        Object {
          "borderTopColor": "#444444",
          "borderTopWidth": 0.5,
          "bottom": 0,
          "left": 12,
          "opacity": 0.8,
          "position": "absolute",
          "right": 12,
        }
      }
    />
  </View>
</View>
`;
